--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 - Add the Changelog.
+    DONE.
 - The library should not call exit, but return the error instead.
     DONE: by replacing with abort().
